--- a/.github/workflows/helm.yaml
+++ b/.github/workflows/helm.yaml
@@ -17,13 +17,11 @@ jobs:
       - name: Helm lint
         run: helm lint .
       - name: Trivy container scan
-        run: |
-          docker pull aquasecurity/trivy:latest
-          docker run --rm aquasecurity/trivy:latest image --exit-code 1 --severity HIGH,CRITICAL nginx:1.24.0
-        # with:
-        #   image-ref: nginx:1.24.0
-        #   format: table
-        #   exit-code: 1  
+        uses: aquasecurity/trivy-action@master
+        with:
+          image-ref: nginx:1.24.0
+          format: table
+          exit-code: 1  
 
       - name: Render templates
         run: helm template .
